objects/Partners__c.object
<CustomObject>
    <description>Created to track which Accounts RES has Partnerships with. And more specifically, to help monitor the stakeholder&apos;s associated to a Project, or Opportunity.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>TEXT(Opportunity__r.RES_Geography__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Fee__c</fullName>
        <label>Consultant Fee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Project_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>You can associate two External Accounts/Companies (i.e. not RES) together as Partners with each other.</inlineHelpText>
        <label>Partner Account2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partners (Partner Account2)</relationshipLabel>
        <relationshipName>Partners2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partnership_Type__c</fullName>
        <label>Partnership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant - Success Fee</fullName>
                </value>
                <value>
                    <fullName>Consultant - No Fee</fullName>
                </value>
                <value>
                    <fullName>Trade Association</fullName>
                </value>
                <value>
                    <fullName>Technology Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PnL__c</fullName>
        <formula>Text( Opportunity__r.PnL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PnL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RES_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Development</label>
        <referenceTo>RES_Projects__c</referenceTo>
        <relationshipName>Development_Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Community Member</fullName>
                </value>
                <value>
                    <fullName>Constructor</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Developer/Owner/Operator</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Financier / Lender</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Insurer</fullName>
                </value>
                <value>
                    <fullName>Joint Owner</fullName>
                </value>
                <value>
                    <fullName>Land Agent</fullName>
                </value>
                <value>
                    <fullName>Landowner</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Non-statutory Consultee</fullName>
                </value>
                <value>
                    <fullName>Statutory Consultee</fullName>
                </value>
                <value>
                    <fullName>Technology Provider</fullName>
                </value>
                <value>
                    <fullName>Trade Body</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>